Fixed gap on right

--- a/styles/scss/pages/index.scss
+++ b/styles/scss/pages/index.scss
@@ -1,5 +1,5 @@
 .home {
-  overflow-x: hidden;
+  overflow: hidden;
 
   .main-flex-row {
     display: flex;
